--- a/static/css/helpers/colors.scss
+++ b/static/css/helpers/colors.scss
@@ -5,7 +5,7 @@ $white: #fff;
 $black: #000;
 $brand-blue: #29bbff;
 $brand-blue2: #2dabf9;
-$brand-darker-blue: #0688fa;
+$question-dark-blue: #0688fa;
 $text-shadows-purple: #263666;
 $message-pale-green: #8adade;
 $remove-red: #ff3434;
@@ -17,3 +17,11 @@ $flame-orange: #f99806;
 $flame-yellow: #ffff00;
 
 $pop-up-box-yellow: #f2ff00;
+$transparent-yellow: rgba(255,247,0,.8);
+$transparent-red: rgba(255,82,82,.92);
+$transparent-white: rgba(255,255,255,.8);
+
+$seashell: #fff5ee;
+$beige: #f7f1dc;
+$veggie-green: #288c33;
+$grey-para-text: #bbb;
