--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flame & Sizzle - {{ page_title }}</title>
     
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700|Mukta+Malar:400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700|Mukta+Malar:400,900|K2D" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome-free/css/all.min.css') }}" type="text/css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
