--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,43 +1,48 @@
 {% extends 'base.html' %} {% block content %}
 
-<div class="container">
-    <div class="row">
-        <h1>Add a Recipe</h1>
-    </div>
-    <div class="row">
+<section class="standard-section-height add-a-recipe-section">
+    <div class="container">
+        <h2 class="section-title flame">Add a Recipe</h2>
         <p>Here is your chance to shine! Share those amazing home recipes with the World and see what they think!</p>
-        <p>Please enter the details of your recipe in the boxes below...</p>
-    </div>
-    <div class="row">
-        <form action="{{ url_for('insert_recipe') }}" method="POST">
-            <div class="row">
-                <ul class="new-user-form">
+        <h3 class="add-a-recipe-header">Step 1:</h3>
+        <p>Please enter the initial details of your recipe in the boxes below...</p>
+        <div class="row">
+            <form action="{{ url_for('insert_recipe') }}" method="POST">
+                <ul class="new-user-form add-recipe-list">
                     <input class="hidden-div" type="text" id="author" name="author" value="{{ user._id }}">
                     <input class="hidden-div" type="text" id="author_COO" name="author_COO" value="{{ user.country }}">
-                    <li><label for="recipe_name">Recipe Name</label></li>
-                    <li><input id="recipe_name" name="recipe_name" type="text" required></li>
-                    <hr>
-                    <li><label for="recipe_image_url">Recipe Photo Image Address</label></li>
-                    <li><input id="recipe_image_url" name="recipe_image_url" type="text" required></li>
-                    <hr>
-                    <li><label for="cusine">Cusine Category</label></li>
-                    <li>
-                        <select id="cusine" name="cusine" required>
-                            <option value="" disabled selected>Choose Cusine Type</option>
-                            {% for cusine in cusines %}
-                            <option value="{{ cusine }}">{{ cusine }}</option>
-                            {% endfor %}
-                        </select>
-                    </li>
-                    <hr>
-                    <button type="submit">Submit</button>
+                    <div class="column">
+                        <li><label for="recipe_name">Recipe Name</label></li>
+                        <li><input id="recipe_name" name="recipe_name" type="text" required></li>
+                        <li><label for="recipe_image_url">Recipe Photo Image Address</label></li>
+                        <li><input id="recipe_image_url" name="recipe_image_url" type="text" required><i class="fas fa-question-circle user-photo-instructions-btn"></i></li>
+                    </div>
+                    <div class="column">
+                        <li><label for="cusine">Cusine Category</label></li>
+                        <li>
+                            <select id="cusine" name="cusine" size="5" required>
+                                <option value="" disabled>Choose Cusine Type</option>
+                                {% for cusine in cusines %}
+                                <option value="{{ cusine }}">{{ cusine }}</option>
+                                {% endfor %}
+                            </select>
+                        </li>
+                    </div>
                 </ul>
-            </div>
-        </form>
-        <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text">
-            <div>Go back</div>
-        </a>
+                <div class="row add-recipe-button-row">
+                    <button type="submit">Submit</button>
+                    <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text">
+                        <span>Go back</span>
+                    </a>
+                </div>
+            </form>
+        </div>
     </div>
+</section>
+<div class="user-photo-instructions">
+    <h3 class="photo-instructions-header">Use a personalised photo!</h3>
+    <p class="photo-instructions-para">To use a photo of your choice please copy and paste the http address of your photo in the photo image address box.</p>
+    <p class="photo-instructions-para">To get the http address, simply find the photo you wish to use on the internet, right click it, and copy the image address / location.</p>
+    <p class="photo-instructions-para">And woila! As if by magic, it will appear when you update!</p>
 </div>
-
 {% endblock %}
