--- a/templates/home.html
+++ b/templates/home.html
@@ -1,56 +1,70 @@
 {% extends 'base.html' %} {% block content %}
-<div class="home-image page-bg"></div>
-<div class="container">
-    <section class="welcome-message-section hidden-to-visible">
-        <div class="welcome-message no-opacity">
-            <h3 class="uppercase">Welcome to</h2>
-                <h1 class="welcome-header flame uppercase">Flame & Sizzle</h1>
-
-                <h3 class="uppercase">It's cooking time!</h2>
-        </div>
-        <div class="welcome-para-container no-opacity">
-            <p class="welcome-para">All of our recipes are added by our users.  Try them, review them, add your own.  It's that simple!</p>
+<section class="welcome-message-section">
+    <div class="welcome-message no-opacity">
+        <div class="welcome-message-content">
+            <h3 class="uppercase">Welcome to</h3>
+            <h1 class="welcome-header uppercase">Flame & Sizzle</h1>
+            <h3 class="uppercase">It's cooking time...</h3>
+            <p class="welcome-para">All of our recipes are added by our users. Try them, review them, add your own. It's that simple!</p>
             <p class="welcome-para">Will you be King or Queen of our leaderboard?!</p>
+            <div class="button-row">
+                {% if username == "guest" %}
+                <a href="{{ url_for('sign_up') }}"><button>Sign Up</button></a> {% else %}
+                <a href="{{ url_for('recipes', username=username) }}"><button>Go to recipes</button></a> {% endif %}
+            </div>
         </div>
-    </section>
-
-    <div class="button-row">
-        {% if username == "guest" %}
-        <a href="{{ url_for('sign_up') }}"><button>Sign Up</button></a>
-        <a href="{{ url_for('log_in') }}"><button>Log In</button></a> {% endif %}
-        <a href="{{ url_for('recipes', username=username) }}"><button>Go to recipes</button></a>
     </div>
-</div>
-<section class="recipes-intro-section see-through-bg-yellow standard-section-height">
-    <div class="column intro-content-left">
-        <h2 class="section-title uppercase">All of the recipes you'll ever need...</h2>
-        <p>Food. Isn't it what life is all about? But what delicious meal will you cook next?</p>
-        <p>If you're like me, and constantly run out of ideas for your next meal, then you've come to the right place.</p>
-        <p>Don't waste another meal time wishing that you'd tried something else. Check out some recipes and satisfy your appetite!</p>
-        <p>Then rate them and add your own for others to share in your delight!</p>
-    </div>
-    <div class="column intro-content-right">
-        <a href="{{ url_for('recipes', username=username) }}"><img src="{{ url_for('static', filename='images/food-default.jpg') }}" class="recipes-link-img grow"></img></a>
-    </div>
+    <img src="{{ url_for('static', filename='images/bbq.jpg') }}" alt="" class="title-img ">
+</section>
+<section class="welcome-sentence center-text">
+    <p>I <span>LOVE</span> to cook. So do you, that's why you're here, right?<br>Dive in, try them out, and share your favourate recipes too.</p>
 </section>
 
-<section class="ingredients-intro-section standard-section-height">
-    <div class="column intro-content-left ingredients-intro-left">
-        <a href="{{ url_for('recipes', username=username) }}"><img src="{{ url_for('static', filename='images/ingredients-wallpaper.jpg') }}" class="ingredients-link-img grow"></img></a>
-    </div>
-    <div class="column intro-content-right ingredients-intro-right">
-        <div class="see-through-bg-red ingredients-intro-text">
-            <h2 class="section-title uppercase">It's all in the ingredients...</h2>
-            <p>Adding a recipe is simple using our built in ingredients list. Simply select your ingredient from our list, add the quantity required, and insert it into the recipe!</p>
-            <p>What?! An ingredient is missing from the list?! No sweat, add it yourself and everyone can then access it now and forever!</p>
-            <p>View all of the existing ingredients in our ingredients section and get creative!</p>
+<section class="recipes-intro-section">
+    <div class="recipes-intro-content">
+        <div class="left">
+            <div class="pic-overlay"></div>
+            <img src="{{ url_for('static', filename='images/food-default.jpg') }}">
+        </div>
+        <div class="right">
+            <div class="content-container">
+                <h2 class="section-title uppercase">So many recipes...</h2>
+                <p>You like delicious?<br><a href="{{ url_for('recipes', username=username) }}">Try a recipe now ></a></p>
+            </div>
         </div>
     </div>
 </section>
-<section class="leaderboard-intro-section standard-section-height">
-    <div class="leaderboard-intro-bg-img">
-        <div class="leaderboard-intro-container">
-            <h2 class="section-title uppercase flame">"Head" to our leaderboard...</h2>
+
+<section class="ingredients-intro-section">
+    <div class="container">
+        <div class="left">
+            <div class="ingredients-intro-content">
+                <h2 class="section-title uppercase">It's all in the ingredients...</h2>
+                <p>Use our comprehensive ingredients list to seamlessly build your recipes. Ingredient missing? No problem, add it yourself for everyone to share.</p>
+                <a href="{{ url_for('ingredients', username=username) }}">See ingredients list ></a>
+            </div>
+        </div>
+        <div class="right">
+            <img src="{{ url_for('static', filename='images/brooke-lark-158019-unsplash.jpg') }}">
+            <img src="{{ url_for('static', filename='images/rustic-vegan-756636-unsplash.jpg') }}">
+        </div>
+    </div>
+</section>
+<section class="fire-text-quote">
+    <div>
+        <p class="quote">Cooking is like painting or writing a song. Just as there are only so many notes or colors, there are only so many flavors - it's how you combine them that sets you apart.</p>
+        <p>Wolfgang Puck - Austrian Chef</p>
+    </div>
+</section>
+
+<div class="leaderboard-intro-bg"></div>
+<section class="leaderboard-intro-section">
+    <div class="left">
+        <a href=""><i class="fas fa-file-alt"></i></a>
+    </div>
+    <div class="right">
+        <div class="leaderboard-intro-content-container center-text">
+            <h2 class="section-title uppercase">Head to our leaderboard</h2>
             <p>Okay, so you might never get on Masterchef, but you might get to the top of our leaderboard!</p>
             <p>Add those recipes, get great reviews, then check out the Head Chefs page to see if you've made it.</p>
         </div>
